--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -438,7 +438,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">สมัครสมาชิคล้มเหลว</h4>
+        <h4 class="modal-title">สมัครสมาชิกล้มเหลว</h4>
       </div>
       <div class="modal-body" id="content-scroll-1">
         <h3>{{ message }}</h3>
