--- a/src/app/profile/changepassword/changepassword.component.html
+++ b/src/app/profile/changepassword/changepassword.component.html
@@ -16,8 +16,8 @@
                           </a>
                       </li> -->
                         <li class="ico-yt">
-                            <a href="#" title="youtube">
-                                <img src="/assets/Images/icons/ico-print.png" />
+                            <a title="print">
+                                <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
                             </a>
                         </li>
 
@@ -50,7 +50,7 @@
                 <div class="col-md-9">
                     <div class="row">
                         <div class="col-md-4">
-                            <span class="txt-middle">{{ 'CONTENT.current-p' | translate }}</span>
+                            <p class="txt-middle">{{ 'CONTENT.current-p' | translate }}</p>
                         </div>
                         <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('currentpassword')">
                             <div class="input-wrapper ">
@@ -66,7 +66,7 @@
                     <div class="row">
 
                         <div class="col-md-4">
-                            <span class="txt-middle">{{ 'CONTENT.new-p' | translate }}</span>
+                            <p class="txt-middle">{{ 'CONTENT.new-p' | translate }}</p>
                         </div>
                         <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('newpassword')">
                             <div class="input-wrapper ">
@@ -82,7 +82,7 @@
                     <div class="row">
 
                         <div class="col-md-4">
-                            <span class="txt-middle">{{ 'CONTENT.confirm-new-p' | translate }}</span>
+                            <p class="txt-middle">{{ 'CONTENT.confirm-new-p' | translate }}</p>
                         </div>
                         <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss('confirmpassword')">
                             <div class="input-wrapper ">
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 form-group">
+                        <div class="col-md-6 form-group" [ngClass]="ValidatorDisplayCss4('otp')">
                             <div class="input-wrapper">
                                     <input class="bg-gray" id="otp" name="otp" maxlength="6" type="text" formControlName="otp" (keypress)="numberOnly($event)">
                                     <div class="form-control-feedback" *ngIf="this.formotp.controls.otp.errors && ( this.formotp.controls.otp.touched)">
@@ -166,6 +166,11 @@
                       
                                     </div>
                             </div>
+                        </div>
+                    </div>
+                    <div class="row has-danger">
+                        <div class="col-12 form-control-feedback">
+                            <p>{{message}}</p>
                         </div>
                     </div>
                     <div class="row pb-4">
@@ -198,11 +203,11 @@
     <!-- /.modal-dialog -->
 </div>
 
-<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;" *ngIf="message">
+<div class="modal fade modal-custom" tabindex="-1" role="dialog" id="message" style="z-index: 9999;">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">เปลี่ยนรหัสผ่านล้มเหลว</h4>
+              <h4 class="modal-title">แจ้งเตือน</h4>
             </div>
             <div class="modal-body" id="content-scroll-1">
               <h3>{{ message }}</h3>
@@ -210,7 +215,7 @@
             <div class="modal-footer" style="display: block;">
               <div class="row justify-content-end">
                 <div class="col-sm-6">
-                  <button class="btn-med btn-primary" data-dismiss="modal">
+                  <button class="btn-med btn-primary" data-dismiss="modal" (click)="reset()">
                     <p style="margin-top: 7px;">ตกลง
                       <i class="fa fa-angle-right" aria-hidden="true"></i>
                     </p>
