--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -14,7 +14,7 @@
                                     <a class="dropdown-item" (click)="navigate('edit-profile')" title="{{ 'NAVBAR.view-edit-personal-information' | translate }}">{{ 'NAVBAR.view-edit-personal-information' | translate }}</a>
                                     <a class="dropdown-item" (click)="navigate('suitability')" title="{{ 'NAVBAR.suitability' | translate }}">{{ 'NAVBAR.suitability' | translate }}</a>
                                     <a class="dropdown-item" (click)="navigate('change-password')" title="{{ 'NAVBAR.changepassword' | translate }}">{{ 'NAVBAR.changepassword' | translate }}</a>
-                                    <a class="dropdown-item" (click)="navigate('setting')" title="{{ 'NAVBAR.setting' | translate }}">{{ 'NAVBAR.setting' | translate }}</a>
+                                    <!-- <a class="dropdown-item" (click)="navigate('setting')" title="{{ 'NAVBAR.setting' | translate }}">{{ 'NAVBAR.setting' | translate }}</a> -->
                                 </div>
                             </div>
                             <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
@@ -27,9 +27,9 @@
                                 <li role="presentation" id="menu3">
                                     <a title="{{ 'NAVBAR.changepassword' | translate }}" (click)="navigate('change-password')">{{ 'NAVBAR.changepassword' | translate }}</a>
                                 </li>
-                                <li role="presentation" id="menu4">
+                                <!-- <li role="presentation" id="menu4">
                                     <a title="{{ 'NAVBAR.setting' | translate }}" (click)="navigate('setting')">{{ 'NAVBAR.setting' | translate }}</a>
-                                </li>
+                                </li> -->
 
                             </ul>
                         </div>
