--- a/src/app/profile/setting/setting.component.html
+++ b/src/app/profile/setting/setting.component.html
@@ -52,7 +52,7 @@
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-md-4">
-                        <span class="txt-middle">{{ 'CONTENT.defult-start-page' | translate }}</span>
+                        <p class="txt-middle">{{ 'CONTENT.defult-start-page' | translate }}</p>
                     </div>
                     <div class="col-md-6">
                         <div class="select-wrapper inline-block">
@@ -66,7 +66,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-4">
-                        <span class="txt-middle">{{ 'LOGIN.comfirm-p' | translate }}</span>
+                        <p class="txt-middle">{{ 'LOGIN.comfirm-p' | translate }}</p>
                     </div>
                     <div class="col-md-6">
                         <div class="input-wrapper ">
