--- a/src/app/report/type/type.component.html
+++ b/src/app/report/type/type.component.html
@@ -14,8 +14,8 @@
             </a>
           </li> -->
           <li class="ico-yt">
-            <a href="#" title="youtube">
-              <img src="/assets/Images/icons/ico-print.png" />
+            <a title="print">
+              <img src="/assets/Images/icons/ico-print.png" (click)="print()" />
             </a>
           </li>
 
