--- a/src/assets/Content/default/sass/content/myport.scss
+++ b/src/assets/Content/default/sass/content/myport.scss
@@ -928,7 +928,7 @@ background-color: $color-secondary;
         @media screen and (max-width: 767px) {
             // margin-top: 20px;
           }
-    }
+    }    
     .list-pagination {
         text-align: right;
         vertical-align: middle;
@@ -1021,7 +1021,7 @@ background-color: $color-secondary;
         input[type="text"] ,::placeholder{
             color: $color-primary;
             background-color: $color-little-gray;
-            border-color: $color-little-gray;
+            // border-color: $color-little-gray;
         }
         label{
             color: $color-secondary;
@@ -1029,13 +1029,13 @@ background-color: $color-secondary;
     }
         
     .fund-list-wrapper {
-        margin: 20px 0px;
+        margin: 10px 0px;
     }
     .detail-head-wrapper{
         position: relative;
         max-width: 100%;
         padding: 10px;
-        padding-bottom: 40px;
+        padding-bottom: 20px;
         margin: 0 auto;
         border-bottom: 5px solid #f5f5f5;
         width: 100%;
@@ -1051,13 +1051,13 @@ background-color: $color-secondary;
             display: inline-block;
         }
         .table-responsive{
-            margin-top: 30px;
+            margin-top: 10px;
         }
     }
     .detail-body-wrapper{
         position: relative;
         max-width: 100%;
-        padding: 30px;
+        padding: 20px 30px;
         margin: 0 auto;
         border-bottom: 5px solid #f5f5f5;
         width: 100%;
@@ -1066,9 +1066,15 @@ background-color: $color-secondary;
             display: inline-block;
             margin-right: 10px;
         }
-        p{
-            margin-bottom: 1.5rem;
+
+        .cleardate{
+            margin-top: 5px;
+            color: $color-red;
+            cursor: pointer;
         }
+        // p{
+        //     margin-bottom: 1.5rem;
+        // }
     }
     .detail-footer-wrapper{
         position: relative;
@@ -1106,6 +1112,14 @@ background-color: $color-secondary;
         .txt-middle{
             padding-top: 7px;
         }
+
+        // p{
+        //     margin-bottom: 5px !important;
+        //     font-size: 20px !important;
+        // }
+        // span{
+        //     font-size: 20px !important;
+        // }
        
         
         .graph-wrapper {
