--- a/src/assets/Content/default/sass/layout/_header.scss
+++ b/src/assets/Content/default/sass/layout/_header.scss
@@ -156,7 +156,7 @@
 
                 li {
                     display: inline-block;
-                    padding: 10px 0;
+                    padding: 5px 0;
                     margin: 0 5px;
                     cursor: pointer;
 
@@ -190,7 +190,7 @@
                 &.sw-lang {
                   li {
                     display: inline-block;
-                    padding: 10px 0;
+                    padding: 5px 0;
                     margin: 0 5px;
                     cursor: pointer;
 
@@ -260,6 +260,10 @@
 
         .logo {
             margin: 0 20px;
+
+            img{
+                height: 80px;
+            }
         }
         
         .main-nav {
@@ -294,7 +298,7 @@
                         a {
                             display: block;
                             height: 100%;
-                            padding: 40px 30px 0 30px;
+                            padding: 30px 30px 0 30px;
                             font-size: 26px;
                             line-height: 24px;
                             text-transform: capitalize;
